--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
   <li>15</li>
   <li>16</li>
   <li>17</li>
-  <li><span class="active">18</span></li>
+  <a href = "blt.html"><li><span class="active">18</span></li></a>
   <li>19</li>
   <li>21</li>
   <li>22</li>
