--- a/home.html
+++ b/home.html
@@ -1,5 +1,18 @@
 <head>
   <link rel="stylesheet" type="text/css" href="homeS.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <nav>
+  <a href="#">HOME</a>
+  <a href="#">DAY</a>
+  <a href="#">WEEK</a>
+  <a href="#">HOME</a>
+  <a href="#">CATEGORIES</a>
+  <a href="#">FAQ</a>
+  <a href="#">someone's calendar</a>
+  <div class="search-wrapper">
+
+   </div>
+</nav>
 </head>
 <body>
  <div class = "calendar">
