--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <a href="#">HOME</a>
   <a href="#">DAY</a>
   <a href="#">WEEK</a>
+  <a href="#">MONTH</a>
   <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>
   <a href="#">FAQ</a>
