links javascript pages

--- a/home.html
+++ b/home.html
@@ -2,12 +2,12 @@
   <link rel="stylesheet" type="text/css" href="homeS.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <nav>
-  <a href="#">HOME</a>
-  <a href="#">DAY</a>
-  <a href="#">WEEK</a>
+  <a href="home.html">HOME</a>
+  <a href="blt.html">DAY</a>
+<!--  <a href="#">WEEK</a>
   <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>
-  <a href="#">FAQ</a>
+  <a href="#">FAQ</a>-->
   <a href="#">someone's calendar</a>
   <div class="search-wrapper">
 
