--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
     <li class="prev">&#10094;</li>
     <li class="next">&#10095;</li>
     <li>
-      July<br>
-      <span style="font-size:18px">2017</span>
+      <p id="mnth"></p>
+      <p id="yr"></p>
     </li>
   </ul>
 </div>
