--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>
   <a href="#">FAQ</a>-->
-  <a href="#">someone's calendar</a>
+  someone's calendar
   <div class="search-wrapper">
 
    </div>
