--- a/blt.html
+++ b/blt.html
@@ -8,7 +8,7 @@
   <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>
   <a href="#">FAQ</a>-->
-  <a href="#">someone's calendar</a>
+  someone's calendar
   <div class="search-wrapper">
 
    </div>
