--- a/blt.html
+++ b/blt.html
@@ -4,17 +4,14 @@
   <nav>
   <a href="home.html">HOME</a>
   <a href="blt.html">DAY</a>
-  <!--<a href="#">WEEK</a>
-  <a href="#">HOME</a>
-  <a href="#">CATEGORIES</a>
-  <a href="#">FAQ</a>-->
-  <a href="#">someone's calendar</a>
+  <a href="blt.html">someone's calendar</a>
   <div class="search-wrapper">
-
    </div>
 </nav>
 </head>
 <body>
-  <header></header>
+  <p class= "month" id="m1"></p>
+  <p class="day" id="d1"></p>
 </body>
+<script src="bltJ.js"></script>
 <footer></footer>
