--- a/blt.html
+++ b/blt.html
@@ -16,6 +16,23 @@
 <body>
   <p class= "month" id="m1"></p>
   <p class="day" id="d1"></p>
+  <div class="sidebar">
+    <div class="header">
+      <h1>Tasks</h1>
+  <!--     <input type="text" id="myInput" placehoder="Create a task">
+      <span onclick="newElement()" class="addBtn">Add</span> -->
+    </div>
+
+    <ul id="myUL">
+       <li>Test 1 </li>
+       <li class="checked">Test 2 </li>
+       <li>Test 3 </li>
+    </ul>
+    <div class="header">
+      <input type="text" id="myInput" placeholder="Create a task">
+     <span onclick="newElement()" class="addBtn">ADD TASK</span>
+     </div>
+    </div>
 </body>
 <script src="bltJ.js"></script>
 <footer></footer>
