--- a/blt.html
+++ b/blt.html
@@ -4,7 +4,7 @@
   <nav>
   <a href="home.html">HOME</a>
   <a href="blt.html">DAY</a>
-  <a href="blt.html">someone's calendar</a>
+  someone's calendar
   <!--<a href="#">WEEK</a>
   <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>
