--- a/blt.html
+++ b/blt.html
@@ -19,8 +19,8 @@
   <div class="sidebar">
     <div class="header">
       <h1>Tasks</h1>
-  <!--     <input type="text" id="myInput" placehoder="Create a task">
-      <span onclick="newElement()" class="addBtn">Add</span> -->
+        <input type="text" id="myInput" placehoder="Create a task">
+      <span onclick="newElement()" class="addBtn">Add</span>
     </div>
 
     <ul id="myUL">
@@ -28,10 +28,6 @@
        <li class="checked">Test 2 </li>
        <li>Test 3 </li>
     </ul>
-    <div class="header">
-      <input type="text" id="myInput" placeholder="Create a task">
-     <span onclick="newElement()" class="addBtn">ADD TASK</span>
-     </div>
     </div>
 </body>
 <script src="bltJ.js"></script>
