--- a/home.html
+++ b/home.html
@@ -73,7 +73,11 @@
   <li>29</li>
   <li>30</li>
   <li>31</li>
+  <div class = "quote">
+    "This is a extremely inspirational quote" - someone who needed to write an inspirational quotebut couldn't com up with one.
+  </div>
  </div>
+
 </ul>
 <!--alerts-->
 
