--- a/blt.html
+++ b/blt.html
@@ -5,8 +5,8 @@
   <a href="home.html">HOME</a>
   <a href="blt.html">DAY</a>
   someone's calendar
-  <!--<a href="#">WEEK</a>
-  <a href="#">HOME</a>
+  <a href="wk.html">WEEK</a>
+<!--  <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>
   <a href="#">FAQ</a>-->
   <div class="search-wrapper">
