--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
   <nav>
   <a href="home.html">HOME</a>
   <a href="blt.html">DAY</a>
-<!--  <a href="#">WEEK</a>
-  <a href="#">HOME</a>
+  <a href="wk.html">WEEK</a>
+  <!--  <a href="#">HOME</a>
   <a href="#">HOME</a>
   <a href="#">DAY</a>
   <a href="#">WEEK</a>
