--- a/wk.html
+++ b/wk.html
@@ -1,5 +1,12 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="homeS.css">
+  <html lang="en">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="wkS.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <nav>
   <a href="home.html">HOME</a>
@@ -14,91 +21,41 @@
   <a href="#">FAQ</a>-->
   someone's calendar
   <div class="search-wrapper">
-
    </div>
 </nav>
 </head>
 <body>
- <div class = "calendar">
-  <header></header>
-  <div class="month">
-  <ul>
-    <li class="prev">&#10094;</li>
-    <li class="next">&#10095;</li>
-    <li>
-      <p id="mnth"></p>
-      <p id="yr"></p>
-    </li>
-  </ul>
-</div>
-
-<ul class="weekdays">
-  <li>Monday</li>
-  <li>Tuesday</li>
-  <li>Wednesday</li>
-  <li>Thursday</li>
-  <li>Friday</li>
-  <li>Saturday</li>
-  <li>Sunday</li>
-</ul>
-
-<ul class="days">
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
-  <li>5</li>
-  <li>6</li>
-  <li>7</li>
-  <li>8</li>
-  <li>9</li>
-  <li>10</li>
-  <li>11</li>
-  <li>12</li>
-  <li>13</li>
-  <li>14</li>
-  <li>15</li>
-  <li>16</li>
-  <li>17</li>
-  <a href = "blt.html"><li><span class="active">18</span></li></a>
-  <li>19</li>
-  <li>21</li>
-  <li>22</li>
-  <li>23</li>
-  <li>24</li>
-  <li>25</li>
-  <li>26</li>
-  <li>27</li>
-  <li>28</li>
-  <li>29</li>
-  <li>30</li>
-  <li>31</li>
-  <div class = "quote">
-    "This is a extremely inspirational quote" - someone who needed to write an inspirational quotebut couldn't com up with one.
-  </div>
- </div>
-
-</ul>
-<!--alerts-->
-
-<!-- taskbar css -->
-<div class="sidebar">
-  <div class="header">
-    <h1>Tasks</h1>
-<!--     <input type="text" id="myInput" placehoder="Create a task">
-    <span onclick="newElement()" class="addBtn">Add</span> -->
-  </div>
-
-  <ul id="myUL">
-     <li>Test 1 </li>
-     <li class="checked">Test 2 </li>
-     <li>Test 3 </li>
-  </ul>
-  <div class="header">
-    <input type="text" id="myInput" placeholder="Create a task">
-   <span onclick="newElement()" class="addBtn">ADD TASK</span>
-   </div>
-  </div>
+  <div class="container">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th class="group">Sunday</th>
+        <th class="group">Monday</th>
+        <th class="group">Tuesday</th>
+        <th class="group">Wednesday</th>
+        <th class="group">Thursday</th>
+        <th class="group">Friday</th>
+        <th class="group">Saturday</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
 </body>
-<script src="homeJ.js"></script>
+<script src="wkJ.js"></script>
 <footer></footer>
