--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
 <!-- taskbar css -->
 <div class="sidebar">
   <div class="header">
-    <h1>Tasks</h1>
+    <h1 class = "heading">Tasks</h1>
 <!--     <input type="text" id="myInput" placehoder="Create a task">
     <span onclick="newElement()" class="addBtn">Add</span> -->
   </div>
