--- a/wk.html
+++ b/wk.html
@@ -26,36 +26,109 @@
 </head>
 <body>
   <div class="container">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th class="group">Sunday</th>
-        <th class="group">Monday</th>
-        <th class="group">Tuesday</th>
-        <th class="group">Wednesday</th>
-        <th class="group">Thursday</th>
-        <th class="group">Friday</th>
-        <th class="group">Saturday</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
+    <div class="sidebar">
+      <div class="header">
+        <h1 class = "heading">Sunday</h1>
+    <!--     <input type="text" id="myInput" placehoder="Create a task">
+        <span onclick="newElement()" class="addBtn">Add</span> -->
+      </div>
+
+      <ul id="myUL">
+      </ul>
+      <div class="header">
+        <input type="text" id="myInput" placeholder="Create a task">
+       <span onclick="newElement()" class="addBtn">ADD TASK</span>
+       </div>
+      </div>
+  <div class="container">
+    <div class="sidebar">
+      <div class="header">
+        <h1 class = "heading">Monday</h1>
+    <!--     <input type="text" id="myInput" placehoder="Create a task">
+        <span onclick="newElement()" class="addBtn">Add</span> -->
+      </div>
+
+      <ul id="myUL2">
+      </ul>
+      <div class="header">
+        <input type="text" id="myInput2" placeholder="Create a task">
+       <span onclick="newElement()" class="addBtn">ADD TASK</span>
+       </div>
+      </div>
+  <div class="container">
+    <div class="sidebar">
+      <div class="header">
+        <h1 class = "heading">Tuesday</h1>
+    <!--     <input type="text" id="myInput" placehoder="Create a task">
+        <span onclick="newElement()" class="addBtn">Add</span> -->
+      </div>
+
+      <ul id="myUL3">
+      </ul>
+      <div class="header">
+        <input type="text" id="myInput3" placeholder="Create a task">
+       <span onclick="newElement()" class="addBtn">ADD TASK</span>
+       </div>
+      </div>
+      <div class="container">
+        <div class="sidebar">
+          <div class="header">
+            <h1 class = "heading">Wednesday</h1>
+        <!--     <input type="text" id="myInput" placehoder="Create a task">
+            <span onclick="newElement()" class="addBtn">Add</span> -->
+          </div>
+
+          <ul id="myUL4">
+          </ul>
+          <div class="header">
+            <input type="text" id="myInput4" placeholder="Create a task">
+           <span onclick="newElement()" class="addBtn">ADD TASK</span>
+           </div>
+  </div><div class="container">
+    <div class="sidebar">
+      <div class="header">
+        <h1 class = "heading">Thursday</h1>
+    <!--     <input type="text" id="myInput" placehoder="Create a task">
+        <span onclick="newElement()" class="addBtn">Add</span> -->
+      </div>
+
+      <ul id="myUL5">
+      </ul>
+      <div class="header">
+        <input type="text" id="myInput5" placeholder="Create a task">
+       <span onclick="newElement()" class="addBtn">ADD TASK</span>
+       </div>
+      </div>
+      <div class="container">
+        <div class="sidebar">
+          <div class="header">
+            <h1 class = "heading">Friday</h1>
+        <!--     <input type="text" id="myInput" placehoder="Create a task">
+            <span onclick="newElement()" class="addBtn">Add</span> -->
+          </div>
+
+          <ul id="myUL6">
+          </ul>
+          <div class="header">
+            <input type="text" id="myInput6" placeholder="Create a task">
+           <span onclick="newElement()" class="addBtn">ADD TASK</span>
+           </div>
+        </div>
+  <div class="container">
+    <div class="sidebar">
+      <div class="header">
+        <h1 class = "heading">Saturday</h1>
+
+      </div>
+
+      <ul id="myUL7">
+      </ul>
+      <div class="header">
+        <input type="text" id="myInput7" placeholder="Create a task">
+       <span onclick="newElement()" class="addBtn">ADD TASK</span>
+       </div>
+     </div>
+
 </body>
 <script src="wkJ.js"></script>
 <footer></footer>
