--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
     </li>
   </ul>
 </div>
-
+<div id="quoteDisplay"></div>
+<button onclick="newQuote()">New Quote</button>
 <ul class="weekdays">
   <li>Monday</li>
   <li>Tuesday</li>
@@ -73,9 +74,7 @@
   <li>29</li>
   <li>30</li>
   <li>31</li>
-  <div class = "quote">
-    "This is a extremely inspirational quote" - someone who needed to write an inspirational quotebut couldn't com up with one.
-  </div>
+
  </div>
 
 </ul>
@@ -99,6 +98,7 @@
    <span onclick="newElement()" class="addBtn">ADD TASK</span>
    </div>
   </div>
+
 </body>
 <script src="homeJ.js"></script>
 <footer></footer>
