--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
    </div>
 </nav>
 </head>
-<body>
+<body onload="current()">
  <div class = "calendar">
   <header></header>
   <div class="month">
