--- a/home.html
+++ b/home.html
@@ -18,9 +18,10 @@
    </div>
 </nav>
 </head>
-<body onload="current()">
+<body onload="current()"> <!-- loads current date to date displays -abc-->
  <div class = "calendar">
   <header></header>
+   <!-- calendar config -abc -->
   <div class="month">
   <ul>
     <li class="prev">&#10094;</li>
