mobile fri endly?

--- a/blt.html
+++ b/blt.html
@@ -26,6 +26,7 @@ function drop(ev) {
   <div class="search-wrapper">
    </div>
 </nav>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
    <!-- current date display for page header -abc -->
