--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
 
    </div>
 </nav>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body window.onload="current()", "close2", "close1"> <!-- loads current date to date displays -abc-->
  <div class = "calendar">
