--- a/wk.html
+++ b/wk.html
@@ -23,6 +23,7 @@
   <div class="search-wrapper">
    </div>
 </nav>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!-- task list for each day of the week -abc -->
