--- a/wk.html
+++ b/wk.html
@@ -17,8 +17,8 @@
   <a href="#">DAY</a>
   <a href="#">WEEK</a>
   <a href="#">MONTH</a>
-  <a href="#">CATEGORIES</a>
-  <a href="#">FAQ</a>-->
+  <a href="#">CATEGORIES</a>-->
+  <a href="faq.html">FAQ</a>
   someone's calendar
   <div class="search-wrapper">
    </div>
