--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 
 </ul>
 <!--alerts-->
-<div id="quoteDisplay"></div>
+<div class="quote" id="quoteDisplay"></div>
 <button onclick="newQuote()">New Quote</button>
 
 <!-- taskbar css -->
