--- a/home.html
+++ b/home.html
@@ -83,8 +83,10 @@
 
 </ul>
 <!--alerts-->
-<div class="quote" id="quoteDisplay"></div>
-<button onclick="newQuote()">New Quote</button>
+<div class="quoty">
+  <div class="quote center" id="quoteDisplay"></div>
+  <button onclick="newQuote()">New Quote</button>
+</div>
 
 <!-- taskbar css -->
 <div class="sidebar">
