--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
 </ul>
 <!--alerts-->
 <div class="quoty">
-  <div class="quote center" id="quoteDisplay"></div>
+  <div class="quote" id="quoteDisplay"></div>
   <button onclick="newQuote()">New Quote</button>
 </div>
 
