--- a/faq.html
+++ b/faq.html
@@ -27,9 +27,19 @@
 
 
 <body>
-  <h1>THIS IS THE FAQ PART OF THE WEBSTITE</h1>
-  <p>I don't really know any frequently asked questions yet, but ayyee this page is done :()</p>
-<script src="faq.css"></script>
-</body>
+  <div class = "about">
+  <h1>Who made this site?</h1>
+  <p>The website you see running right now was created by Anyssa Castorina, Victoria Chang, Makayla Moore, and Katrina Philip. This is our final projects for Girls Who Code Summer Immersion Program. The website was created in 7 days.</p>
+  </div>
 
+  <div class = "connect">
+  <p2>You can connect with us on LinkedIn!!</p2>
+  <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina</a>
+  <a href="https://www.linkedin.com/in/victoria-chang-307722143/">Victoria</a>
+  <a href="https://www.linkedin.com/in/makayla-moore-800149146/">Makayla</a>
+  <a href="https://www.linkedin.com/in/anyssa-c-052a5013b/">Anyssa</a>
+  </div>
+
+</body>
+<script src="wkJ.js"></script>
 <footer></footer>
