--- a/faq.html
+++ b/faq.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="wkS.css">
+  <link rel="stylesheet" type="text/css" href="faq.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
   <nav>
   <a href="home.html">HOME</a>
   <a href="blt.html">DAY</a>
@@ -29,17 +30,22 @@
 <body>
   <div class = "about">
   <h1>Who made this site?</h1>
-  <p>The website you see running right now was created by Anyssa Castorina, Victoria Chang, Makayla Moore, and Katrina Philip. This is our final projects for Girls Who Code Summer Immersion Program. The website was created in 7 days.</p>
+  <p1>The website you see running right now was created by Anyssa Castorina, Victoria Chang, Makayla Moore, and Katrina Philip. This is our final project for the Girls Who Code Summer Immersion Program. The website was created in 7 days.</p1>
+
+  <h2>Why is this website better then my calendar/reminder app on my phone?</h2>
+  <p2>The DotBook is a one of a kind scheduling website that has aspects of a calendar, a bullet journal, a notes app, and a reminder app all built in one. It is accessible on almost any screen and is very user friendly.</p2>
+
+ <h3>Why won't this work?</h3>
+ <p3>Our website is still under construction, so there will be a lot of bugs and errors. The inconvenience is only temporary, the website will be running smooth in a short while. </p3>
   </div>
 
-  <div class = "connect">
+
+<footer>  <div class = "connect">
+
   <p2>You can connect with us on LinkedIn!!</p2>
   <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina</a>
   <a href="https://www.linkedin.com/in/victoria-chang-307722143/">Victoria</a>
   <a href="https://www.linkedin.com/in/makayla-moore-800149146/">Makayla</a>
   <a href="https://www.linkedin.com/in/anyssa-c-052a5013b/">Anyssa</a>
-  </div>
-
+  </div> </footer>
 </body>
-<script src="wkJ.js"></script>
-<footer></footer>
