--- a/blt.html
+++ b/blt.html
@@ -24,6 +24,8 @@ function drop(ev) {
 <!--  <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
   <a href="faq.html">FAQ</a>
+  someone's calendar
+
   <div class="search-wrapper">
    </div>
 </nav>
