--- a/faq.html
+++ b/faq.html
@@ -43,9 +43,9 @@
 <footer>  <div class = "connect">
 
   <p2>You can connect with us on LinkedIn!!</p2>
-  <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina</a>
-  <a href="https://www.linkedin.com/in/victoria-chang-307722143/">Victoria</a>
-  <a href="https://www.linkedin.com/in/makayla-moore-800149146/">Makayla</a>
-  <a href="https://www.linkedin.com/in/anyssa-c-052a5013b/">Anyssa</a>
+  <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina,</a>
+  <a href="https://www.linkedin.com/in/victoria-chang-307722143/"> Victoria,</a>
+  <a href="https://www.linkedin.com/in/makayla-moore-800149146/"> Makayla,</a>
+  <a href="https://www.linkedin.com/in/anyssa-c-052a5013b/"> Anyssa</a>
   </div> </footer>
 </body>
