idk it wants me to push for some reason

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 </nav>
 </head>
 <body window.onload="current()", "close2", "close1"> <!-- loads current date to date displays -abc-->
- <div class = "calendar">
+ <div class = "calendar table-responsive">
   <header></header>
    <!-- calendar config -abc -->
   <div class="month">
@@ -34,7 +34,7 @@
   </ul>
 </div>
 
-<ul class="weekdays">
+<ul class="weekdays col-xs-12 col-md-8">
   <li>Monday</li>
   <li>Tuesday</li>
   <li>Wednesday</li>
@@ -63,8 +63,8 @@
   <li>16</li>
   <li>17</li>
   <li>18</li>
-  <a href = "blt.html"><li><span class="active">19</span></li></a>
-  <li>20</li>
+  <li>19</li>
+  <a href = "blt.html"><li><span class="active">20</span></li></a>
   <li>21</li>
   <li>22</li>
   <li>23</li>
