--- a/home.html
+++ b/home.html
@@ -3,105 +3,103 @@
   <link rel="stylesheet" type="text/css" href="homeS.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <nav>
-  <a href="home.html">HOME</a>
-  <a href="blt.html">DAY</a>
-  <a href="wk.html">WEEK</a>
-  <!--
+    <a href="home.html">HOME</a>
+    <a href="blt.html">DAY</a>
+    <a href="wk.html">WEEK</a>
+    <!--
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-  <a href="faq.html">FAQ</a>
-  someone's calendar
-  <div class="search-wrapper">
+    <a href="faq.html">FAQ</a> someone's calendar
+    <div class="search-wrapper">
 
-   </div>
-</nav>
+    </div>
+  </nav>
 </head>
-<body window.onload="current()", "close2", "close1"> <!-- loads current date to date displays -abc-->
- <div class = "calendar">
-  <header></header>
-   <!-- calendar config -abc -->
-  <div class="month">
-  <ul>
-    <li class="prev">&#10094;</li>
-    <li class="next">&#10095;</li>
-    <li>
-      <p id="mnth"></p>
-      <p id="yr"></p>
-    </li>
-  </ul>
-</div>
 
-<ul class="weekdays">
-  <li>Monday</li>
-  <li>Tuesday</li>
-  <li>Wednesday</li>
-  <li>Thursday</li>
-  <li>Friday</li>
-  <li>Saturday</li>
-  <li>Sunday</li>
-</ul>
+<body window.onload="current()" , "close2", "close1">
+  <!-- loads current date to date displays -abc-->
+  <div class="calendar">
+    <header></header>
+    <!-- calendar config -abc -->
+    <div class="month">
+      <ul>
+        <li class="prev">&#10094;</li>
+        <li class="next">&#10095;</li>
+        <li>
+          <p id="mnth"></p>
+          <p id="yr"></p>
+        </li>
+      </ul>
+    </div>
 
-<ul class="days">
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
-  <li>5</li>
-  <li>6</li>
-  <li>7</li>
-  <li>8</li>
-  <li>9</li>
-  <li>10</li>
-  <li>11</li>
-  <li>12</li>
-  <li>13</li>
-  <li>14</li>
-  <li>15</li>
-  <li>16</li>
-  <li>17</li>
-  <li>18</li>
-  <a href = "blt.html"><li><span class="active">19</span></li></a>
-  <li>20</li>
-  <li>21</li>
-  <li>22</li>
-  <li>23</li>
-  <li>24</li>
-  <li>25</li>
-  <li>26</li>
-  <li>27</li>
-  <li>28</li>
-  <li>29</li>
-  <li>30</li>
-  <li>31</li>
+    <ul class="weekdays">
+      <li>Monday</li>
+      <li>Tuesday</li>
+      <li>Wednesday</li>
+      <li>Thursday</li>
+      <li>Friday</li>
+      <li>Saturday</li>
+      <li>Sunday</li>
+    </ul>
 
-  <!--quote generator- kate -->
+    <ul class="days">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <a href="blt.html">
+        <li><span class="active">19</span></li>
+      </a>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
 
- </div>
+      <!--quote generator- kate -->
 
-</ul>
-<!--alerts-->
-<div class="quoty">
-  <div class="quote" id="quoteDisplay"></div>
-  <button onclick="newQuote()">New Quote</button>
-</div>
-
-<!-- taskbar css -->
-<div class="sidebar">
-  <div class="header">
-    <h1 class = "heading">Tasks</h1>
-<!--     <input type="text" id="myInput" placehoder="Create a task">
-    <span onclick="newElement()" class="addBtn">Add</span> -->
   </div>
 
-  <ul id="myUL">
-     <li>Test 1 </li>
-     <li class="checked">Test 2 </li>
-     <li>Test 3 </li>
   </ul>
-  <div class="header">
-    <input type="text" id="myInput" placeholder="Create a task">
-   <span onclick="newElement()" class="addBtn">ADD TASK</span>
-   </div>
+  <!--alerts-->
+  <div class="quoty">
+    <div class="quote" id="quoteDisplay"></div>
+    <button onclick="newQuote()">New Quote</button>
+  </div>
+
+  <!-- taskbar html - Victoria -->
+  <div class="sidebar">
+    <div class="header">
+      <h1>Tasks</h1>
+      <input type="text" id="myInput" placeholder="Create a task...">
+      <span onclick="newElement()" class="addBtn">ADD TASK</span>
+    </div>
+    <ul id="myUL">
+      <li class="checked taskitem">Test 1 </li>
+      <li class="taskitem">Test 2 </li>
+      <li class="taskitem">Test 3 </li>
+    </ul>
   </div>
   <script src="homeJ.js"></script>
   <footer></footer>
