--- a/faq.html
+++ b/faq.html
@@ -30,22 +30,23 @@
 <body>
   <div class = "about">
   <h1>Who made this site?</h1>
-  <p1>The website you see running right now was created by Anyssa Castorina, Victoria Chang, Makayla Moore, and Katrina Philip. This is our final project for the Girls Who Code Summer Immersion Program. The website was created in 7 days.</p1>
+  <p1>This website was created by Anyssa Castorina, Victoria Chang, Makayla Moore, and Katrina Philip as our final project for the Girls Who Code Summer Immersion Program. This website was created in 7 days, so please be tolerant of any bugs you may come across. We plan to have the website running smoothly soon.</p1>
+  <div class = "connect">
+
+    <p2>You can connect with us on LinkedIn!</p2>
+    <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina,</a>
+    <a href="https://www.linkedin.com/in/victoria-chang-307722143/"> Victoria,</a>
+    <a href="https://www.linkedin.com/in/makayla-moore-800149146/"> Makayla,</a>
+    <div><a class="abc" href="https://www.linkedin.com/in/anyssa-c-052a5013b/"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/86666-200.png" class="pcb img-responsive" alt="robot icon"></a><p class="abc">Anyssa Castorina</p></div>
+    </div>
 
   <h2>Why is this website better then my calendar/reminder app on my phone?</h2>
   <p2>The DotBook is a one of a kind scheduling website that has aspects of a calendar, a bullet journal, a notes app, and a reminder app all built in one. It is accessible on almost any screen and is very user friendly.</p2>
 
- <h3>Why won't this work?</h3>
- <p3>Our website is still under construction, so there will be a lot of bugs and errors. The inconvenience is only temporary, the website will be running smooth in a short while. </p3>
+ <!-- <h3>Why won't this work?</h3>
+ <p3>Our website is still under construction, so there will be a lot of bugs and errors. The inconvenience is only temporary, the website will be running smooth in a short while. </p3> -->
   </div>
 
 
-<footer>  <div class = "connect">
-
-  <p2>You can connect with us on LinkedIn!!</p2>
-  <a href="https://www.linkedin.com/in/katrina-philip-0b9563145/">Katrina,</a>
-  <a href="https://www.linkedin.com/in/victoria-chang-307722143/"> Victoria,</a>
-  <a href="https://www.linkedin.com/in/makayla-moore-800149146/"> Makayla,</a>
-  <a href="https://www.linkedin.com/in/anyssa-c-052a5013b/"> Anyssa</a>
-  </div> </footer>
+<footer>   </footer>
 </body>
