day page taskbar stuff

--- a/blt.html
+++ b/blt.html
@@ -36,16 +36,28 @@ function drop(ev) {
   <p class="day" id="d1"></p>
   <div class="sidebar">
     <div class="header">
-        <input type="text" id="myInput" placehoder="Create a task">
-      <span onclick="newElement()" class="addBtn">Add</span>
+      <h1>Tasks</h1>
+      <input type="text" id="myInput" placeholder="Create a task...">
+      <span onclick="newElement()" class="addBtn">ADD TASK</span>
     </div>
-
-    <ul id="myUL">
-       <li>Test 1 </li>
-       <li class="checked">Test 2 </li>
-       <li>Test 3 </li>
+    <ul id="myUL" >
+      <li class="checked taskitem">Test 1 </li>
+      <li class="taskitem">Test 2 </li>
+      <li class="taskitem">Test 3 </li>
     </ul>
+  </div>
+  <div class="sidebar2">
+    <div class="header">
+      <h1>Tasks</h1>
+      <input type="text" id="myInput" placeholder="Create a task...">
+      <span onclick="newElement()" class="addBtn">ADD TASK</span>
     </div>
+    <ul id="myUL" >
+      <li class="checked taskitem">Test 1 </li>
+      <li class="taskitem">Test 2 </li>
+      <li class="taskitem">Test 3 </li>
+    </ul>
+  </div>
     <!-- working on stickers -abc -->
 </body>
 <script src="bltJ.js"></script>
