--- a/blt.html
+++ b/blt.html
@@ -49,4 +49,5 @@ function drop(ev) {
     <!-- working on stickers -abc -->
 </body>
 <script src="bltJ.js"></script>
+<script src="jquery-3.2.1.min.js"></script>
 <footer></footer>
