--- a/faq.html
+++ b/faq.html
@@ -47,6 +47,6 @@
  <p3>Our website is still under construction, so there will be a lot of bugs and errors. The inconvenience is only temporary, the website will be running smooth in a short while. </p3> -->
   </div>
 
-
-<footer>   </footer>
+<script src="jquery-3.2.1.min.js"></script>
+<footer></footer>
 </body>
