--- a/home.html
+++ b/home.html
@@ -98,5 +98,6 @@
     </ul>
   </div>
   <script src="homeJ.js"></script>
+  <script src="jquery-3.2.1.min.js"></script>
   <footer></footer>
 </body>
