--- a/blt.html
+++ b/blt.html
@@ -36,7 +36,7 @@ function drop(ev) {
   <p class="day" id="d1"></p>
   <div class="sidebar">
     <div class="header">
-      <h1>Tasks</h1>
+      <h1 id="day"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
       <span onclick="newElement()" class="addBtn">ADD TASK</span>
     </div>
@@ -48,7 +48,7 @@ function drop(ev) {
   </div>
   <div class="sidebar2">
     <div class="header">
-      <h1>Tasks</h1>
+      <h1 id="nday"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
       <span onclick="newElement()" class="addBtn">ADD TASK</span>
     </div>
@@ -59,7 +59,15 @@ function drop(ev) {
     </ul>
   </div>
     <!-- working on stickers -abc -->
+    <div draggable="true" id="drag-1" class="draggable">
+  <p> 1 </p>
+</div>
+<div id="drag-2" class="draggable">
+    <p> 2 </p>
+</div>
 </body>
 <script src="bltJ.js"></script>
 <script src="jquery-3.2.1.min.js"></script>
+<!-- <script src="interact.js"></script> -->
+<script src="https://c4d6f7d727e094887e93-4ea74b676357550bd514a6a5b344c625.ssl.cf2.rackcdn.com/interact-1.1.1.min.js"></script>
 <footer></footer>
