--- a/blt.html
+++ b/blt.html
@@ -36,9 +36,9 @@ function drop(ev) {
   <p class="day" id="d1"></p>
   <div class="sidebar">
     <div class="header">
-      <h1 id="day"></h1>
+      <h1 class="hed"id="day"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
-      <span onclick="newElement()" class="addBtn">ADD TASK</span>
+      <span onclick="newElement()" class="addBtn"><img class="plus"src="http://www.iconsdb.com/icons/download/white/plus-5-512.png" alt="plus icon"></span>
     </div>
     <ul id="myUL" >
       <li class="checked taskitem">Test 1 </li>
@@ -48,9 +48,9 @@ function drop(ev) {
   </div>
   <div class="sidebar2">
     <div class="header">
-      <h1 id="nday"></h1>
+      <h1 class="hed" id="nday"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
-      <span onclick="newElement()" class="addBtn">ADD TASK</span>
+      <span onclick="newElement()" class="addBtn"><img class="plus"src="http://www.iconsdb.com/icons/download/white/plus-5-512.png" alt="plus icon"></span>
     </div>
     <ul id="myUL" >
       <li class="checked taskitem">Test 1 </li>
