--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
   <!-- taskbar html - Victoria -->
   <div class="sidebar">
     <div class="header">
-      <h1>Tasks</h1>
+      <h1 class="tak">Tasks</h1>
       <input type="text" id="myInput" placeholder="Create a task...">
       <span onclick="newElement()" class="addBtn">ADD TASK</span>
     </div>
