--- a/blt.html
+++ b/blt.html
@@ -59,15 +59,15 @@ function drop(ev) {
     </ul>
   </div>
     <!-- working on stickers -abc -->
-    <div draggable="true" id="drag-1" class="draggable">
-  <p> 1 </p>
-</div>
-<div id="drag-2" class="draggable">
-    <p> 2 </p>
-</div>
+    <div id="drag-1" class="draggable">
+      <p> 1 </p>
+    </div>
+    <div id="drag-2" class="draggable">
+      <p> 2 </p>
+    </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
 <script src="jquery-3.2.1.min.js"></script>
 <!-- <script src="interact.js"></script> -->
-<script src="https://c4d6f7d727e094887e93-4ea74b676357550bd514a6a5b344c625.ssl.cf2.rackcdn.com/interact-1.1.1.min.js"></script>
 <footer></footer>
