--- a/home.html
+++ b/home.html
@@ -97,7 +97,30 @@
       <li class="taskitem">Test 3 </li>
     </ul>
   </div>
+  <div class="flex-container">
+            <div class="color-panel">
+                <div class="palette">
+                    <div class="cbutton one"></div>
+                    <div class="cbutton two"></div>
+                    <div class="cbutton three"></div>
+                    <div class="cbutton four"></div>
+                    <div class="cbutton five"></div>
+                </div>
+            </div>
+            <div class="center-header">
+                <span title="click me to create a note" class="button create">NOTES+</span>
+                <span class="button done">&#10003</span>
+                <span title="click me to pick a note color" class="button color">C</span>
+                <span title="click me to delete current note" class="button delete">X</span>
+            </div>
+            <div class="paper-container">
+                <textarea></textarea>
+            </div>
+
+            <div class="notes-list-container">
+                <ul class="notes-list"></ul>
+            </div>
+        </div>
   <script src="homeJ.js"></script>
-  <script src="jquery-3.2.1.min.js"></script>
   <footer></footer>
 </body>
