--- a/blt.html
+++ b/blt.html
@@ -60,10 +60,10 @@ function drop(ev) {
   </div>
     <!-- working on stickers -abc -->
     <div id="drag-1" class="draggable">
-      <p> 1 </p>
+      <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
     <div id="drag-2" class="draggable">
-      <p> 2 </p>
+      <p><img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon"></p>
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
