--- a/blt.html
+++ b/blt.html
@@ -63,7 +63,7 @@ function drop(ev) {
       <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
     <div id="drag-2" class="draggable">
-      <p><img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon"></p>
+      <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
