--- a/blt.html
+++ b/blt.html
@@ -65,6 +65,15 @@ function drop(ev) {
     <div id="drag-2" class="draggable">
       <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
+    <div id="drag-3" class="draggable">
+      <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
+    </div>
+    <div id="drag-4" class="draggable">
+      <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
+    </div>
+    <div id="drag-5" class="draggable">
+      <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
+    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
