Home CSS updates

--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
   <!--alerts-->
   <div class="quoty">
     <div class="quote" id="quoteDisplay"></div>
-    <button onclick="newQuote()">New Quote</button>
+    <button class= "quoteBtn" onclick="newQuote()">New Quote</button>
   </div>
 
   <!-- taskbar html - Victoria -->
@@ -108,10 +108,10 @@
                 </div>
             </div>
             <div class="center-header">
-                <span title="click me to create a note" class="button create">NOTES+</span>
+                <span title="Create a Note" class="button create">NOTES+</span>
                 <span class="button done">&#10003</span>
-                <span title="click me to pick a note color" class="button color">C</span>
-                <span title="click me to delete current note" class="button delete">X</span>
+                <span title="Pick Note color" class="button color">C</span>
+                <span title="Delete current Note" class="button delete">X</span>
             </div>
             <div class="paper-container">
                 <textarea></textarea>
