--- a/blt.html
+++ b/blt.html
@@ -31,10 +31,11 @@ function drop(ev) {
 </nav>
 </head>
 <body>
+<div class="container centered">
    <!-- current date display for page header -abc -->
   <p class= "month" id="m1"></p>
   <p class="day" id="d1"></p>
-  <div class="sidebar">
+  <div class="sidebar col-md-8">
     <div class="header">
       <h1 class="hed"id="day"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
@@ -46,7 +47,7 @@ function drop(ev) {
       <li class="taskitem">Test 3 </li>
     </ul>
   </div>
-  <div class="sidebar2">
+  <div class="sidebar2 col-md-8">
     <div class="header">
       <h1 class="hed" id="nday"></h1>
       <input type="text" id="myInput" placeholder="Create a task...">
@@ -58,6 +59,7 @@ function drop(ev) {
       <li class="taskitem">Test 3 </li>
     </ul>
   </div>
+</div>
     <!-- working on stickers -abc -->
     <div id="drag-1" class="draggable">
       <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
