--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="homeS.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <nav>
     <a href="home.html">HOME</a>
     <a href="blt.html">DAY</a>
@@ -97,7 +98,7 @@
       <li class="taskitem">Test 3 </li>
     </ul>
   </div>
-  <div class="flex-container">
+  <div class="flex-container post">
             <div class="color-panel">
                 <div class="palette">
                     <div class="cbutton one"></div>
@@ -113,14 +114,15 @@
                 <span title="Pick Note color" class="button color">C</span>
                 <span title="Delete current Note" class="button delete">X</span>
             </div>
-            <div class="paper-container">
+            <div class="paper-container post">
                 <textarea></textarea>
             </div>
 
-            <div class="notes-list-container">
-                <ul class="notes-list"></ul>
+            <div class="notes-list-container post">
+                <ul class="notes-list post"></ul>
             </div>
         </div>
+
   <script src="homeJ.js"></script>
   <footer></footer>
 </body>
