--- a/blt.html
+++ b/blt.html
@@ -130,6 +130,21 @@
     <div id="drag-20" class="draggable stack4">
       <img class="hstk" src="http://www.myiconfinder.com/uploads/iconsets/128-128-7a2b79a0684977101997348a4938d1f2.png" alt="pencil icon">
     </div>
+    <div id="drag-21" class="draggable stack5">
+      <img class="hstk" src="https://d30y9cdsu7xlg0.cloudfront.net/png/14973-200.png" alt="lightbulb icon">
+    </div>
+    <div id="drag-22" class="draggable stack5">
+      <img class="hstk" src="https://d30y9cdsu7xlg0.cloudfront.net/png/14973-200.png" alt="lightbulb icon">
+    </div>
+    <div id="drag-23" class="draggable stack5">
+      <img class="hstk" src="https://d30y9cdsu7xlg0.cloudfront.net/png/14973-200.png" alt="lightbulb icon">
+    </div>
+    <div id="drag-24" class="draggable stack5">
+      <img class="hstk" src="https://d30y9cdsu7xlg0.cloudfront.net/png/14973-200.png" alt="lightbulb icon">
+    </div>
+    <div id="drag-25" class="draggable stack5">
+      <img class="hstk" src="https://d30y9cdsu7xlg0.cloudfront.net/png/14973-200.png" alt="lightbulb icon">
+    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
