--- a/blt.html
+++ b/blt.html
@@ -23,8 +23,7 @@
     <a href="wk.html">WEEK</a>
     <!--  <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a>
-    someone's calendar
+    <a href="faq.html">FAQ</a> someone's calendar
 
     <div class="search-wrapper">
     </div>
@@ -54,19 +53,21 @@
     </div>
     <div class="sidebar2 col-md-8">
       <div class="header">
-      <h1 id="nday"></h1>
+        <h1 id="nday"></h1>
+      </div>
+      <ul id="myUL">
+        <li class="checked taskitem">Test 1 </li>
+        <li class="taskitem">Test 2 </li>
+        <li class="taskitem">Test 3 </li>
+      </ul>
+      <div>
+        <input type="text" id="myInput" placeholder="Create a task...">
+        <span onclick="newElement()" class="addBtn">+</span>
+      </div>
     </div>
-    <ul id="myUL">
-      <li class="checked taskitem">Test 1 </li>
-      <li class="taskitem">Test 2 </li>
-      <li class="taskitem">Test 3 </li>
-    </ul>
-    <input type="text" id="myInput" placeholder="Create a task...">
-    <span onclick="newElement()" class="addBtn">+</span>
-  </div>
 
-  <!-- working on stickers -abc -->
-  <!-- <div id="drag-1" class="draggable">
+    <!-- working on stickers -abc -->
+    <!-- <div id="drag-1" class="draggable">
     <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
 </div> -->
     <!-- working on stickers -abc -->
