--- a/home.html
+++ b/home.html
@@ -98,6 +98,8 @@
       <li class="taskitem">Test 3 </li>
     </ul>
   </div>
+
+  <!-- Notes -->
   <div class="flex-container post">
             <div class="color-panel">
                 <div class="palette">
