--- a/blt.html
+++ b/blt.html
@@ -145,6 +145,21 @@
     <div id="drag-25" class="draggable stack5">
       <img class="hstk" src="https://image.flaticon.com/icons/png/128/68/68587.png" alt="lightbulb icon">
     </div>
+    <div id="drag-26" class="draggable stack6">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
+    </div>
+    <div id="drag-27" class="draggable stack6">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
+    </div>
+    <div id="drag-28" class="draggable stack6">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
+    </div>
+    <div id="drag-29" class="draggable stack6">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307g" alt="lightbulb icon">
+    </div>
+    <div id="drag-30" class="draggable stack6">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
+    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
