--- a/blt.html
+++ b/blt.html
@@ -71,7 +71,7 @@
     <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
 </div> -->
     <!-- working on stickers -abc -->
-    <div id="drag-1" class="draggable stack1">
+    <!-- <div id="drag-1" class="draggable stack1">
       <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
     <div id="drag-2" class="draggable stack1">
@@ -145,7 +145,7 @@
     </div>
     <div id="drag-25" class="draggable stack5">
       <img class="hstk" src="https://image.flaticon.com/icons/png/128/68/68587.png" alt="lightbulb icon">
-    </div>
+    </div> -->
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
