--- a/blt.html
+++ b/blt.html
@@ -71,7 +71,7 @@
     <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
 </div> -->
     <!-- working on stickers -abc -->
-    <!-- <div id="drag-1" class="draggable stack1">
+    <div id="drag-1" class="draggable stack1">
       <img class="hstk" src="https://image.flaticon.com/icons/png/512/35/35538.png" alt="love heart icon">
     </div>
     <div id="drag-2" class="draggable stack1">
@@ -145,9 +145,7 @@
     </div>
     <div id="drag-25" class="draggable stack5">
       <img class="hstk" src="https://image.flaticon.com/icons/png/128/68/68587.png" alt="lightbulb icon">
-<<<<<<< HEAD
-    </div> -->
-=======
+    </div>
     </div>
     <div id="drag-26" class="draggable stack6">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
@@ -164,11 +162,10 @@
     <div id="drag-30" class="draggable stack6">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
     </div>
->>>>>>> 1663910f539612bdec700369b2614764cc39c1a3
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
 <script src="jquery-3.2.1.min.js"></script>
-<!-- <script src="interact.js"></script> -->
+ <!-- <script src="interact.js"></script> -->
 
 <footer></footer>
