--- a/home.html
+++ b/home.html
@@ -17,17 +17,15 @@
     </div>
   </nav>
 </head>
-<body window.onload="current()", "close2", "close1"> <!-- loads current date to date displays -abc-->
+<body onload="current()", "close2", "close1"> <!-- loads current date to date displays -abc-->
  <div class = "calendar table-responsive">
   <header></header>
    <!-- calendar config -abc -->
   <div class="month">
   <ul>
-    <li class="prev">&#10094;</li>
-    <li class="next">&#10095;</li>
+    <p class="dt" id="mnth"></p>
+    <p class="dt" id="yr"></p>
     <li>
-      <p id="mnth"></p>
-      <p id="yr"></p>
     </li>
   </ul>
 </div>
@@ -63,10 +61,10 @@
   <li>18</li>
   <li>19</li>
   <li>20</li>
-  <a href = "blt.html"><li><span class="active">21</span></li></a>
+  <li>21</li>
   <li>22</li>
   <li>23</li>
-  <li>24</li>
+  <a href = "blt.html"><li><span class="active">24</span></li></a>
   <li>25</li>
   <li>26</li>
   <li>27</li>
