--- a/blt.html
+++ b/blt.html
@@ -20,7 +20,7 @@
   <nav>
     <a href="home.html">HOME</a>
     <a href="blt.html">DAY</a>
-<!-- 
+<!--
     <a href="wk.html">WEEK</a>
      <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
@@ -147,7 +147,6 @@
     <div id="drag-25" class="draggable stack5">
       <img class="hstk" src="https://image.flaticon.com/icons/png/128/68/68587.png" alt="lightbulb icon">
     </div>
-    </div>
     <div id="drag-26" class="draggable stack6">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
     </div>
@@ -163,6 +162,21 @@
     <div id="drag-30" class="draggable stack6">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
     </div>
+    <!-- <div id="drag-31" class="draggable stack7">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-32" class="draggable stack7">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-33" class="draggable stack7">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-34" class="draggable stack7">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-35" class="draggable stack7">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div> -->
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
