fixed the taskbar on the day view even though it was working like 2 minutes ago

--- a/blt.html
+++ b/blt.html
@@ -20,7 +20,7 @@
   <nav>
     <a href="home.html">HOME</a>
     <a href="blt.html">DAY</a>
-<!--
+    <!--
     <a href="wk.html">WEEK</a>
      <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
@@ -56,13 +56,13 @@
       <div class="header">
         <h1 id="nday"></h1>
       </div>
-      <ul id="myUL">
-        <li class="checked taskitem">Test 1 </li>
-        <li class="taskitem">Test 2 </li>
-        <li class="taskitem">Test 3 </li>
+      <ul id="myUL2">
+        <li class="checked taskitem2">Test 1 </li>
+        <li class="taskitem2">Test 2 </li>
+        <li class="taskitem2">Test 3 </li>
       </ul>
       <div>
-        <input type="text" id="myInput" placeholder="Create a task...">
+        <input type="text" id="myInput2" placeholder="Create a task...">
         <span onclick="newElement()" class="addBtn">+</span>
       </div>
     </div>
@@ -181,6 +181,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 <script src="bltJ.js"></script>
 <script src="jquery-3.2.1.min.js"></script>
- <!-- <script src="interact.js"></script> -->
+<!-- <script src="interact.js"></script> -->
 
 <footer></footer>
