fixed the taskbar on the day view even though it was working like 2 minutes ago again

--- a/blt.html
+++ b/blt.html
@@ -63,7 +63,7 @@
       </ul>
       <div>
         <input type="text" id="myInput2" placeholder="Create a task...">
-        <span onclick="newElement()" class="addBtn">+</span>
+        <span onclick="newElement2()" class="addBtn">+</span>
       </div>
     </div>
 
